Actualizar contenido del CV y añadir estilos

--- a/index.html
+++ b/index.html
@@ -3,13 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentación de luismontalba</title>
-    <style>
-        body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background-color: #f0f0f0; }
-        h1 { color: #333; }
-    </style>
+    <title>CV de Luis Martínez</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Página de presentación de luismontalba</h1>
+    <div class="container">
+        <header>
+            <h1>Luis Martínez</h1>
+            <p>Ingeniero Agrónomo con perfil tecnológico y especialización en Odoo</p>
+        </header>
+
+        <section id="profile" class="card">
+            <h2>Perfil Profesional</h2>
+            <p>Ingeniero Agrónomo con más de 25 años de experiencia pluridisciplinar, destacando la gestión de proyectos. Muy orientado al sector TIC y especializado en software Odoo.</p>
+        </section>
+
+        <section id="skills" class="card">
+            <h2>Competencias TIC</h2>
+            <ul>
+                <li><strong>ERP:</strong> Odoo (OpenERP) - Nivel funcional y técnico.</li>
+                <li><strong>Lenguajes:</strong> PHP, Python, HTML5, CSS3, JavaScript.</li>
+                <li><strong>Bases de Datos:</strong> PostgreSQL, MySQL.</li>
+            </ul>
+        </section>
+
+        <section id="experience" class="card">
+            <h2>Experiencia Laboral</h2>
+            <div class="job">
+                <h3>Jefe de Proyectos de Desarrollo</h3>
+                <p class="job-info">Ministerio de Sanidad | 2020 – Actualidad</p>
+                <ul>
+                    <li>Subdirección General de Servicios de Salud Digital.</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h3>Consultor Odoo</h3>
+                <p class="job-info"><a href="https://www.tecnativa.com" target="_blank" rel="noopener noreferrer">www.tecnativa.com</a> | 2018 – 2019</p>
+                <ul>
+                    <li>Implantación ERP Odoo: Análisis de necesidades, instalación y configuración.</li>
+                    <li>Diseño y programación de módulos específicos.</li>
+                    <li>Asistencia postventa y servicio de mantenimiento.</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h3>Responsable Área Comercial</h3>
+                <p class="job-info">Consultorías Propias Sector Ingeniería | 2002 – 2013</p>
+                <ul>
+                    <li>Contratación de proyectos y servicios de ingeniería en el sector industrial y de obra civil.</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h3>Corresponsal EURES</h3>
+                <p class="job-info">Junta Comunidades Castilla la Mancha | 2009– 2012</p>
+                <ul>
+                    <li>Representación de la Región ante el Servicio de Empleo Europeo.</li>
+                    <li>Prospección y cobertura de puestos de trabajo en el extranjero.</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h3>Ingeniero Comercial</h3>
+                <p class="job-info">TOMSA DESTIL, S.L. | 2005 – 2008</p>
+                <ul>
+                    <li>Venta de plantas industriales de destilación de alcohol en España y LATAM.</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h3>Ingeniero de Producción</h3>
+                <p class="job-info">VIAS Y CONSTRUCCIONES, S.A. | 2000 – 2002</p>
+                <ul>
+                    <li>Diseño, implantación y gestión de software de control económico de obra en MS Access.</li>
+                </ul>
+            </div>
+            <div class="job">
+                <h3>Ingeniero Control Datos</h3>
+                <p class="job-info">TRAGSATEC, S.A. | 1996 – 1999</p>
+                <ul>
+                    <li>Gestión y explotación de bases de datos del Catastro de Rústica.</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="education" class="card">
+            <h2>Formación y Cursos</h2>
+            <ul>
+                <li>Experto Universitario en Desarrollo de Aplicaciones Web Dinámicas (UNED, 2012-2013).</li>
+                <li>Curso funcional oficial OpenERP V7 (Topconsultant, 2013).</li>
+            </ul>
+        </section>
+
+        <section id="languages" class="card">
+            <h2>Idiomas</h2>
+            <p><strong>Inglés:</strong> Nivel profesional, utilizado como idioma habitual de trabajo.</p>
+        </section>
+
+        <footer>
+            <p>CV de Luis Martínez - <a href="https://github.com/luismontalba/presentacion">Repositorio en GitHub</a></p>
+        </footer>
+    </div>
 </body>
 </html>
